Task-58612: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for all "little" texts

--- a/poll-webapp/src/main/webapp/skin/less/poll.less
+++ b/poll-webapp/src/main/webapp/skin/less/poll.less
@@ -82,10 +82,14 @@
           }
         }
       }
+      .creator-not-voted {
+	    border: 2px solid @primaryColor;
+        border-radius: 5px;
+	  }
       .answer-cant-vote {
 	    opacity: 0.5;
 	  }
-      .answer-voted {
+      .answer {
         padding: 5px 0;
         .vote-content {
           position: relative;
@@ -141,7 +145,7 @@
     }
     .total-votes {
       font-size: 14px;
-      color: @grayLight
+      color: @textLightColor
     }
   }
 }
@@ -149,6 +153,6 @@
 #poll-activity-stream {
   .votes-remaining-state {
     font-size: 14px;
-    color: @grayLight
+    color: @textLightColor
   }
 }
